databases/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: esb
spec:
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort:  5050
  type: ClusterIP
