databases/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: esb
  annotations:
    caddy.ingress.kubernetes.io/strip-path-prefix: "false"
spec:
  ingressClassName: caddy
  tls:
    - hosts:
        - pgadmin.easybulk.intra
      secretName: mycerts-caddy
  rules:
    - host: pgadmin.easybulk.intra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
